# gpt

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/scripts/: publish.sh  publish_test.sh  test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
gpt/: Cargo.toml  cli.rs  tui.rs
gpt/cli/src/: main.rs
gpt/src/: main.rs
gpt_core/: Cargo.toml
gpt_core/src/: chat.rs  config.rs  data.rs  error.rs  lib.rs  mock.rs  model.rs  msg.rs  req.rs
gpt_ui/: Cargo.toml  build.rs
gpt_ui/src/: lib.rs
gpt_ui/src/cli/: chat.rs  config.rs  dialog.rs  error.rs  mod.rs
gpt_ui/src/tui/: error.rs  mod.rs
