[workspace]
members = ["gpt", "gpt_core", "gpt_ui"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha8"
authors = ["Louis <836250617@qq.com>"]
description = "Call chatGPT with CLI."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/gpt"
documentation = "https://docs.rs/gpt_core"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
snafu = { version = "0.8.2" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
