[package]
name = "gpt"
version = "0.0.1-alpha3"
edition = "2021"

[dependencies]
gpt_core = { path = "../gpt_core" }
gpt_ui = { path = "../gpt_ui" }
# async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "gpt_cli"
path = "cli.rs"
required-features = ["cli"]

[[bin]]
name = "gpt_tui"
path = "tui.rs"
required-features = ["tui"]

[features]
default = []
tui = ["gpt_ui/tui"]
cli = ["gpt_ui/cli"]
