[package]
name = "gpt_core"
version.workspace = true
authors.workspace = true
description = "chatGPT UI's core crate. Offer the basic functionalities and mock server for chatGPT UI."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpt_core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# serde
serde = { workspace = true }
serde_json = { workspace = true }
# error
snafu = { workspace = true }
# tool
uuid = { version = "1.10.0", features = ["v7", "serde"] }
dirs = "5.0.1"
sanitize-filename = "0.5.0"
# net
reqwest = { version = "0.12.8", features = ["json", "stream"] }
url = { version = "2.5.2", features = ["serde"] }
encrypt_config = { workspace = true }
# async
futures-util = "0.3.30"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = []
mock = []
