[package]
name = "gpt_ui"
version.workspace = true
authors.workspace = true
description = "chatGPT UI."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpt_core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gpt_core = { path = "../gpt_core" }
# error
snafu = { workspace = true }
# ui
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.26.3", optional = true }
clap = { version = "4.5.4", optional = true, features = ["derive"] }
dialoguer = { version = "0.11.0", optional = true }
cliclack = { git = "https://github.com/kingwingfly/cliclack.git", branch = "feature/multiline", optional = true, features = [
    "multiline",
] }
# async
tokio = { version = "1", features = ["macros", "signal"] }
# tools
const_format = "0.2"
ctrlc = { version = "3.4.4" }

[build-dependencies]
vergen = { version = "8.3", features = ["git", "rustc", "gitcl"] }

[features]
default = ["cliclack", "cli"]
mock = ["gpt_core/mock"]
cli = ["dep:clap"]
tui = ["dep:crossterm", "dep:ratatui"]
dialoguer = ["dep:dialoguer"]
cliclack = ["dep:cliclack"]
