[package]
name = "gpt_ui"
version.workspace = true
authors.workspace = true
description = "chatGPT UI."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpt_core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gpt_core = { path = "../gpt_core" }
# error
snafu = { workspace = true }
# ui
crossterm = { version = "0.28.1", optional = true }
ratatui = { version = "0.28.1", optional = true }
clap = { version = "4.5.13", optional = true, features = ["derive"] }
dialoguer = { version = "0.11.0", optional = true }
cliclack = { version = "0.3", optional = true }
# async
tokio = { version = "1", features = ["macros", "signal"] }
# tools
const_format = "0.2"
ctrlc = { version = "3.4.4" }

[build-dependencies]
vergen = { version = "8.3", features = ["git", "rustc", "gitcl"] }

[features]
default = ["cliclack", "cli"]
mock = ["gpt_core/mock"]
cli = ["dep:clap"]
tui = ["dep:crossterm", "dep:ratatui"]
dialoguer = ["dep:dialoguer"]
cliclack = ["dep:cliclack"]
